--- a/index2.html
+++ b/index2.html
@@ -68,10 +68,11 @@
     <br><br>
 
     <input type="submit" value="Submit">
-    <a href="index3.html"></a>
+    <a href="index3.html?email=martinfabian966@gmail.com&pswd=0101010133"></a>
     </form>
     </a>
   
 </form>
 </body>
+
 </html>
