--- a/index4.html
+++ b/index4.html
@@ -29,9 +29,9 @@
 <h1>BOXING SERVICES</h1>
     <hr style="border: 1px solid black;">
     <h2>
-    <a href="index.html">HOME</a>
-    <a href="index2.html">EVENTS</a>
-    <a href="index4.html">BLOG</a>
+    <a href="index3.html">HOME</a>
+    <a href="index4.html">EVENTS</a>
+    <a href="index6.html">BLOG</a>
     </h2>
     <hr style="border: 1px solid black;">
     <h1>TRAINING PROGRAMS</h1>
@@ -87,3 +87,4 @@ No sparring or contact
   <p><h3>Email: martinfabian931@gmail.com</h3>
   <h3>Boxing Services Sports</h3>
   <h3>Location: Pulong Kendi Sta.Ana Taguig City</h3>
+
