--- a/index5.html
+++ b/index5.html
@@ -29,13 +29,14 @@
   <h1>BOXING BLOG</h1>
       <hr style="border: 1px solid black;">
     <h2>
-    <a href="index.html">HOME</a>
-    <a href="index2.html">EVENTS</a>
-    <a href="index3.html">SERVICES</a>
+    <a href="index3.html">HOME</a>
+    <a href="index4.html">EVENTS</a>
+    <a href="index5.html">SERVICES</a>
     </h2>
     <hr style="border: 1px solid black;">
   <br>
   <body>
   <video width="70%" height="70%" controls autoplay loop muted>
     <source src="boxingclub.mp4">
+
     <source src="hhttps://www.tiktok.com/@art.boxing.club.ph/video/7521710111463640338?is_from_webapp=1&sender_device=pc">
