--- a/index6.html
+++ b/index6.html
@@ -29,9 +29,9 @@
     <h1>TAEKWONDO EVENTS</h1>
     <hr style="border: 1px solid black;">
     <h2>
-    <a href="index.html">HOME</a>
-    <a href="index3.html">SERVICES</a>
-    <a href="index4.html">BLOG</a>
+    <a href="index3.html">HOME</a>
+    <a href="index5.html">SERVICES</a>
+    <a href="index6.html">BLOG</a>
     </h2>
     <hr style="border: 1px solid black;">
 
@@ -67,4 +67,5 @@
     <h2>Host a kid-friendly boxing event with light drills, games, and mini-competitions<br>
     <br>
     <br>
+
     </body>
